--- a/01. The Seven Layer OSI Model.md
+++ b/01. The Seven Layer OSI Model.md
@@ -143,10 +143,12 @@ Layer 5 just manages the session of the two endpoints:
 
 #### <font size=4>Seis, Presentation</font>
 
+> The presentation layer is responsible for encoding and compression of data and most importantly encryption algorithms.
+
 The 6th layer is crucial, it is responsible for preparing the data to be ready for processing by the application layer. It's responsible for encrypting the data using encryption protocols, character set translation and data compression. Machines may use different encoding so this layer is responsible for encoding/decoding the information, if the two machines want to encrypt their sessions then this layer is also responsible for that. From the actual message encryption to establishing encryption algorithms and keys. And lastly this layer is responsible for compressing the data to improve efficiency.
 
 <br>
 
 #### <font size=4>Siete, Application</font>
 
-The application layer contains application specific protocols that involve user input or output, it is actually the only layer that interacts with the user. A protocol that can be found in this layer is HTTP or SMTP.
+> The application layer contains application specific protocols that involve user input or output, it is actually the only layer that interacts with the user. A protocol that can be found in this layer is HTTP or SMTP.
