Made a lot of the stuff collapsible

--- a/02. Network Routing Wiki.md
+++ b/02. Network Routing Wiki.md
@@ -1,5 +1,7 @@
 # HOW PACKETS GET THROUGH THE NETWORK
 
+<details>
+<summary>Do not read this section</summary>
 In my summary of the `7 Layer OSI Model` I talked about 3 techniques that packets use to get routed through the internet, `Hop by Hop`, `End to End`, and `Service to Service`. These techniques facilitate the ability to get a message from one machine to another, and the way they work is enabled by the layers they lie in.
 
 When passing in the network the packets will be processed and transformed by different network devices, so to know what happens to a packet we need to learn and understand those devices:
@@ -305,7 +307,7 @@ Lastly, `Dynamic Routing`. When setting a Router to `Dynamic Routing` it will oc
 | Dynamic              | Dynamic   | 10.0.66.0     | 10.0.44.2   |   |   | 3                    | Dynamic   | 10.0.55.0     | 10.0.44.1   |
 
 Hooray, now, without any intervention, networks 10.0.55.0 and 10.0.66.0 can communicate!
-
+</details>
 
 
 # Question 2
