Fixed that one sentence.

--- a/10. ICMP.md
+++ b/10. ICMP.md
@@ -62,11 +62,15 @@ An ICMP redirection attack takes advantage of the ICMP redirect message, and an 
 
 ![Network map, Kali IP change to .4 instead of .5](/Pictures/ICMP_Redirection/Network_Map.png)
 
-The Attacker is the Kali machine (192.168.100.5), My victim is the 'Win10 - 01' machine (192.168.100.1) and the machine I am going to gateway to is the DC (192.168.50.1). Now, let's craft ourself a redirect packet.
+The Attacker is the Kali machine (192.168.100.4).<br>
+My victim is the 'Win10 - 01' machine (192.168.100.1).<br>
+The machine I am going to act as a gateway to is the DC (192.168.50.1).<br>
+Now, let's craft ourself a redirect packet.
 
 ```diff
 - (The IP 192.168.100.5 does not exist in your map)
 - (I cant understand what this sentence means)
++ Fixed and corrected the sentence.
 ```
 
 *click click*... *keyboard noises*... *Head slaminh against desk*... *more keyboard noises*...
@@ -114,7 +118,7 @@ Exhibit 1 madafaka, this bitch!
 
 ![Default rule for ICMPv4 traffic](/Pictures/ICMP_Redirection/Old_Firewall_Rule.PNG)
 
-On windows, allegedly ICMP redirection is turned on by default. But on the firewall the ICMPv4 rule does not allow ICMP redirection pacets to pass through! Only ICMP echo.
+On windows, allegedly ICMP redirection is turned on by default. But on the firewall the ICMPv4 rule does not allow ICMP redirection packets to pass through! Only ICMP echo.
 
 So I made my own rule:
 
