--- a/11. ARP.md
+++ b/11. ARP.md
@@ -102,6 +102,6 @@ The above script sends a packet to each of the machines posing as the other mach
 
 ![Machine2, IP: 192.168.100.2](/Pictures/ARP_Poisoning/Victim_2_Poisoned_ARP_Table.PNG)
 
-```diif
+```diff
 + (No more fixes needed here)
 ```
