--- a/15. Firewalls.md
+++ b/15. Firewalls.md
@@ -6,14 +6,15 @@ Firewalls will usualy be the main "router" of the network since you want to be a
 
 # Stateful VS. Stateless
 
-> **Stateless** firewalls are firewalls that filter packets statically, treating each packet as a singular using (and not as a part of a data stream). That means that the filtering capablities are basic such as source and destination ip, protocols and ports. 
+> **Stateless** firewalls are firewalls that filter packets statically, treating each packet as a standalone entity (and not as a part of a data stream). That means that the filtering capablities are basic such as source and destination ip, protocols and ports. 
 
-> **Stateful** firewalls are firewalls that look at entire data streams and applies advanced analyses to detect threats that are at the data stream level.
+> **Stateful** firewalls are firewalls that look at entire data streams and applies advanced analyses to detect threats that are at the data stream level, they do that by tracking session ids and protocols.
 
 The difference is in the simplicity, they both achieve the same goal. Stateful firewalls require more resources to analyze a data streams and accept it, it doesn't work based on strict rules and predetermined outcomes while stateless FWs do. Also, due to the higher consumption of resources by a single data stream of stateful fireworks, they are more susceptible to DDOS attacks.
 
 ```diff
-- (Stateful firewall have capabilities that stateless does not have and you have to make the rules more loose if you have a stateless firewall can you explain why?)
+- (Stateful firewall have capabilities that stateless does not have, you have to make the rules more loose if you have a stateless firewall can you explain why?)
++ The stateful firewall allows the identification of specific sessions, giving the ability of advanced analyses based on the protocol of the session and the data that is sent throught the packets. And then blocking or forwarding the connection based on those findings. That kind of analysis is not possible when viewing each packet on it's own, the data inside isn't complete and you can only make out so much from the contents of a single packet. That is why the rules have to be more loose and vague. 
 ```
 
 # Pros and Cons of a Firewall
