--- a/15. Firewalls.md
+++ b/15. Firewalls.md
@@ -8,7 +8,7 @@ Firewalls will usualy be the main "router" of the network since you want to be a
 
 > **Stateless** firewalls are firewalls that filter packets statically, treating each packet as a standalone entity (and not as a part of a data stream). That means that the filtering capablities are basic such as source and destination ip, protocols and ports. 
 
-> **Stateful** firewalls are firewalls that look at entire data streams and applies advanced analyses to detect threats that are at the data stream level, they do that by tracking session ids and protocols.
+> **Stateful** firewalls are firewalls that look at entire data streams and applies advanced analyses to detect threats that are at the data stream level, they do that by tracking session ids and source + destination ips and ports.
 
 The difference is in the simplicity, they both achieve the same goal. Stateful firewalls require more resources to analyze a data streams and accept it, it doesn't work based on strict rules and predetermined outcomes while stateless FWs do. Also, due to the higher consumption of resources by a single data stream of stateful fireworks, they are more susceptible to DDOS attacks.
 
@@ -17,19 +17,18 @@ The difference is in the simplicity, they both achieve the same goal. Stateful f
 + The stateful firewall allows the identification of specific sessions, giving the ability of advanced analyses based on the protocol of the session and the data that is sent throught the packets. And then blocking or forwarding the connection based on those findings. That kind of analysis is not possible when viewing each packet on it's own, the data inside isn't complete and you can only make out so much from the contents of a single packet. That is why the rules have to be more loose and vague. 
 ```
 
-# Pros and Cons of a Firewall
+**Stateful Firewall**
+| Pros                                                              | Cons                                                               |
+|-------------------------------------------------------------------|--------------------------------------------------------------------|
+| The ability to view a whole session as an entity.                 | Better anaysis comes at the cost of computing power and resources. |
+| Great attack prevention abilities, due to more advanced analysis. | It costs more than the stateless firewall.                         |
+| Extensive logging.                                                | Can be tricked by using port forwarding and fake network traffic.  |
 
-It is undeniabe that having a firewall nowadays is crucial, but what are the cons of that? Obviously the firewall allows the contorl of traffic inside and to the network, blocking communication using specific IPs/protocols/ports and even analyzing the communication in the network to prevent cyber attacks.
+**Stateless Firewall**
 
-Let's break it down.
-
-First. **Cost**, firewalls come in both hardware and software versions where the former is the (way) more expensive. But it doesn't end with the purchase cost. Meintenance is also a factor to consider which includes a professional IT personal, if the firewall is of the hardware variety then installation costs are also accounted for.
-
-**Comfortability**, depending on the strictness of the FW rules, the user can become restricted from performing ertein tasks. A thing that can damage a company's productivity.
-
-**Complexity**, firewalls used in massive networks often require teams of professionals to operate the complexity of such firewalls.
 
 ```diff
 - (The intention was for you to write pros and cons about the firewall types)
++ Sorry I misunderstood ;)
 - (About the firewall rules I want to see a picture of the rules after the changes, and I can tell you from what I have read that there are more changes need to be made)
 ```
